--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "facediff"
+name = "certdiff"
 version = "0.0.1"
 authors = ["Sahil Tembhare <isr.sahil.mk@gmail.com>"]
 edition = "2018"
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.10.4", features = ["blocking"] }
+reqwest = { version = "0.10.4", features = ["blocking", "json"] }
 clap = "2.33.0"
-serde_json = "1.0.48"
+json = "0.12.4"
