--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 reqwest = { version = "0.10.4", features = ["blocking", "json"] }
 clap = "2.33.0"
 json = "0.12.4"
+colored = "1.9"
