--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.10.4", features = ["blocking", "json"] }
+reqwest = { version = "0.10.4", features = ["blocking"] }
 clap = "2.33.0"
 json = "0.12.4"
 colored = "1.9"
